--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
+
 {
   "name": "orderdetails",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dileepkumargembali1.github.io/Fullstack_frontend",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -15,11 +17,16 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
